# wasp

./: .gitignore  README.md
app/: CMakeLists.txt  Kconfig  prj.conf  west.yml  wifi_credentials.conf.example
app/boards/: nucleo_f439zi.conf  rpi_pico_rp2040_w.conf  rpi_pico_rp2040_w.overlay
app/modules/wamr/: CMakeLists.txt  Kconfig
app/src/: led.c  led.h  main.c  protocol.h  rpc.c  wasp.h
app/src/agent/: agent_thread.c
app/src/net/: announce.c  net_thread.c
app/src/wamr/: native_remote.c  wamr_runtime.c  wamr_runtime.h
docs/: demo.md  performance.md  writing-modules.md
docs/diagrams/: README.md  atomics.puml  discovery.puml  errors.puml  lock-contention.puml  reboot-reflash.puml  remote-memory.puml  session.puml
tools/: build_test_module.sh  mandelbrot_demo.py  mandelbrot_module.c  perf_module.c  perf_test.py  remote_as_module.c  remote_cpp_module.cpp  remote_module.c  remote_module.wasm  swarm_test.py  test_module.c  test_module.wasm  wasp_client.py
tools/include/wasp/: remote.h  remote.hpp
tools/lib/: wasp_remote_rt.c
tools/wasp-remote-pass/: WaspRemotePass.cpp
